--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,26 @@
   text-align: center;
 }
 
+/*
+.AppBg:after {
+  content: ' ';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background: linear-gradient(
+    45deg,
+    var(--LightBgGradientTo),
+    var(--LightBgGradientFrom)
+  );
+  background-size: cover;
+  background-position: bottom center;
+  mix-blend-mode: soft-light;
+}
+*/
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -22,6 +42,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: auto;
+
+  width: 100%;
+  height: 100vh;
+  background-image: url('./assets/bg-light.png');
+  background-size: cover;
+  background-position: bottom center;
 }
 
 .App-link {
