--- a/src/component/Weather.scss
+++ b/src/component/Weather.scss
@@ -400,3 +400,11 @@ $text-gray: rgb(100, 100, 100);
   bottom: 2%;
   right: 2%;
 }
+
+.MerquriTitle {
+font-size: 3rem;
+font-weight: 600;
+letter-spacing: 0.2rem;
+margin-bottom: 1rem;
+opacity: .8;
+}
